# hmsdfe

./: CMakeLists.txt  README.md
include/: pch.hpp  pch.win32.hpp
include/allocators/: PersistentAllocator.hpp
include/async/: File.hpp  Worker.hpp
include/clock/: clock.hpp
include/ct/: ctcounter.hpp
include/ecs/: Arch.hpp  ArchBufferPool.hpp  Component.hpp  Entity.hpp  Instance.hpp  ecs.hpp
include/engine/: Engine.hpp  Game.hpp  MainWorker.hpp  ResourceManager.hpp  Scene.hpp  SceneManager.hpp  SubSystem.hpp
include/launcher/: Process.hpp  SharedMemory.hpp
include/lockfree/: Queue.hpp
include/tasky/: TaskQueue.hpp  TaskScheduler.hpp  task.hpp
include/test-game/: Launcher.hpp
include/utils/: Hash.hpp  Pointer.hpp  String.hpp
include/win/: error.hpp  wrapper.hpp
src/async/: File.cpp  Worker.cpp
src/ecs/: Arch.cpp  ArchBufferPool.cpp  Instance.cpp
src/engine/: Engine.cpp  MainWorker.cpp  SceneManager.cpp
src/launcher/: main.cpp
src/perf-tests/: main.cpp
src/tasky/: TaskScheduler.cpp
src/test-game/: Launcher.cpp  main.cpp
src/utils/: String.cpp
src/win/: error.cpp
